Uploaded first draft of FPSAC webpage

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -1,4 +1,283 @@
-<h2>Formal Power Series and Algebraic Combinatorics (2022)</h2>
-<p>
+<!DOCTYPE html>
+<html lang="en">
 
-</p>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>FPSAC 2022</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css" />
+    <!-- Third party plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+        rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/custom.scss" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">FPSAC 2022</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#schedule">Schedule</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#speakers">Speakers</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#downloads">Downloads</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#organizers">Organizers</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Register</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="col-lg-10 align-self-end">
+                    <h1 class="text-uppercase text-white font-weight-bold">Welcome to FPSAC 2022</h1>
+                    <hr class="divider my-4" />
+                </div>
+                <div class="col-lg-8 align-self-baseline">
+                    <p class="text-white-75 font-weight-light mb-5">July 18–22, 2022, Indian Institute of Science,
+                        Bengaluru, India</p>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#contact">Register</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Schedule-->
+    <section class="page-section bg-primary" id="schedule">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="text-white mt-0">Schedule</h2>
+                    <hr class="divider light my-4" />
+                    <p class="text-white-50 mb-4">July 18-19 : Program 1</p>
+                    <p class="text-white-50 mb-4">July 19-21 : Program 2</p>
+                    <p class="text-white-50 mb-4">July 22 : Program 3</p>
+                    <a class="btn btn-light btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1Rac9SYQ0CkGxJ80XnBs7S2rxrWNcquog/view?usp=sharing"
+                        target="_blank">Download Schedule</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Speakers -->
+    <section class="page-section" id="speakers">
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2>Speakers</h2>
+
+                </div>
+            </div>
+        </div>
+        <hr class="divider my-4" />
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="assets/img/portfolio/fullsize/1.jpg" class="img-fullsize" alt="...">
+                    <h3 class="h4 mb-2">Speaker One</h3>
+                </div>
+                <div class="col-sm">
+                    <p class="text-muted mb-0">Speaker One is a mathematician and computer scientist working on the
+                        foundations of mathematics, computability, and mathematical foundations of programming
+                        languages. He also works on computer tools that assist mathematicians with formally verified
+                        mathematics. Obtaining Ph.D. in pure and applied logic from the School of Computer Science
+                        at Carnegie Mellon University in 2000, he is currently a professor of computational
+                        mathematics at the University of Ljubljana, Slovenia. In 2012, he was a visiting member at
+                        the Institute for Advanced Study. He has co-authored the book "Homotopy type theory:
+                        Univalent foundations of Mathematics", introducing homotopy type theory.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="mt-5">
+                        <img src="assets/img/portfolio/fullsize/2.jpg" class="img-fullsize" alt="...">
+                        <h3 class="h4 mb-2">Speaker Two</h3>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="mt-5">
+                        <p class="text-muted mb-0">Speaker Two is a mathematician and computer scientist working on the
+                            foundations of mathematics, computability, and mathematical foundations of programming
+                            languages. He also works on computer tools that assist mathematicians with formally verified
+                            mathematics. Obtaining Ph.D. in pure and applied logic from the School of Computer Science
+                            at Carnegie Mellon University in 2000, he is currently a professor of computational
+                            mathematics at the University of Ljubljana, Slovenia. In 2012, he was a visiting member at
+                            the Institute for Advanced Study. He has co-authored the book "Homotopy type theory:
+                            Univalent foundations of Mathematics", introducing homotopy type theory.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="mt-5">
+                        <img src="assets/img/portfolio/fullsize/3.jpg" class="img-fullsize" alt="...">
+                        <h3 class="h4 mb-2">Speaker Three</h3>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="mt-5"></div>
+                    <p class="text-muted mb-0">Speaker Three is a mathematician and computer scientist working on the
+                        foundations of mathematics, computability, and mathematical foundations of programming
+                        languages. He also works on computer tools that assist mathematicians with formally verified
+                        mathematics. Obtaining Ph.D. in pure and applied logic from the School of Computer Science
+                        at Carnegie Mellon University in 2000, he is currently a professor of computational
+                        mathematics at the University of Ljubljana, Slovenia. In 2012, he was a visiting member at
+                        the Institute for Advanced Study. He has co-authored the book "Homotopy type theory:
+                        Univalent foundations of Mathematics", introducing homotopy type theory.</p>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+
+    <!-- Downloads-->
+    <section class="page-section bg-dark text-white" id="downloads">
+        <div class="container text-center">
+            <h2 class="mb-4">Downloads</h2>
+            <hr class="divider light my-4" />
+            <a class="btn btn-light btn-xl" href="https://drive.google.com/drive/folders/1X5Gztcl7U4X6ENt_o4DoAd7l6tq53ZZm?usp=sharing">Download All</a>
+        </div>
+    </section>
+
+        <!-- Organizers-->
+        <section class="page-section" id="organizers"></section>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2>Organizers</h2>
+                </div>
+            </div>
+        </div>
+        <hr class="divider my-4" />
+        
+        <div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/7.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/7.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">IISc</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/8.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/8.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Sponsor One</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/9.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/9.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Sponsor Two</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Sponsor Three</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Sponsor Four</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Sponsor Five</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact-->
+    <section class="page-section" id="contact">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="mt-0">Register</h2>
+                    <hr class="divider my-4" />
+                    <p class="text-muted mb-5">Fill the form for registering with us</p>
+                    <p class="text-muted mb-5">Cancellation policy: To cancel your reservation, send an e-mail to
+                        fpsac19@fmf.uni-lj.si at least 14 days before the conference to get a full refund (minus bank
+                        and administration fees). If you cancel later, or do not arrive at the conference, you will get
+                        a partial refund (minus bank and administration fees, and any costs that we might not be able to
+                        recoup).</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                    <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+                    <div>+91 8080808080</div>
+                </div>
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+                    <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                    <a class="d-block" href="mailto:contact@yourwebsite.com">fpsac2022@iisc.ac.in</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="bg-light py-5">
+        <div class="container">
+            <div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div>
+        </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
+</body>
+
+</html>
