--- a/postdoc-alumni.html
+++ b/postdoc-alumni.html
@@ -9,7 +9,10 @@ title: Former Postdocs and Inspire faculty
     <ul style="list-style-type:none">
     {% for y in alumni %}
       <li><p style="margin-top: 15px; margin-bottom: -3px"><strong>Name:</strong> <em>{{ y.name }}</em></p></li>
-      {% if y.position %}<li><strong>Present position:</strong> {{ y.position }}</li>{% endif %}    
+      {% if y.position %}<li><strong>Postdoc position:</strong> {{ y.position }}</li>{% endif %}    
+      {% if y.start %}<li><strong>Start date:</strong> {{ y.start }}</li>{% endif %}
+      {% if y.end %}<li><strong>End date:</strong> {{ y.end }}</li>{% endif %}
+      {% if y.present %}<li><strong>Present position:</strong> {{ y.present }}</li>{% endif %}
       {% endfor %}
     </ul>
     
