better formatting for postdoc alumni

--- a/postdoc-alumni.html
+++ b/postdoc-alumni.html
@@ -9,12 +9,11 @@ title: Former Postdocs and Inspire faculty
     <ul style="list-style-type:none">
     {% for y in alumni %}
       <li><p style="margin-top: 15px; margin-bottom: -3px"><strong>Name:</strong> <em>{{ y.name }}</em>
-        (Ph.D.{% if y.phd %}, {{ y.phd }}{% endif %})</p></li>
+        (Ph.D.{% if y.phd %}, {{ y.phd }}{% endif %}){% if y.start %}, {{ y.start }} &ndash; {% if y.end %}{{y.end}}.{% endif %}{% endif %}
+        </p></li>
       {% if y.area %}<li><strong>Research area:</strong> {{ y.area }}</li>{% endif %}
       {% if y.position %}<li><strong>Position at IISc:</strong> {{ y.position }}</li>{% endif %}   
       {% if y.present %}<li><strong>Current/next position:</strong> {{ y.present }}</li>{% endif %} 
-      {% if y.start %}<li><strong>Start date (at IISc):</strong> {{ y.start }}</li>{% endif %}
-      {% if y.end %}<li><strong>End date (at IISc):</strong> {{ y.end }}</li>{% endif %}
       {% endfor %}
     </ul>
     
