separated inspire alumni

--- a/inspire-alumni.html
+++ b/inspire-alumni.html
@@ -1,10 +1,10 @@
 ---
-title: Former Postdocs
+title: Former Inspire faculty and DST Scientists
 ---
 <div class="col-md-12">
-  <h2> Former Postdocs of the Department </h2>
+  <h2> Former Inspire faculty and DST Scientists of the Department </h2>
 
-  {% assign alumni = site.data.postdoc-alumni %}
+  {% assign alumni = site.data.inspire-alumni %}
 
     <ul style="list-style-type:none">
     {% for y in alumni %}
