--- a/seminars-all.html
+++ b/seminars-all.html
@@ -59,6 +59,7 @@ title: Seminars
 <div class="" id = "tables">
   <h3>By Year</h3>
   <ul>
+    <li><a href="SeminarsByYear/Seminars2021.html">2020</a></li>
     <li><a href="SeminarsByYear/Seminars2020.html">2020</a></li>
     <li><a href="SeminarsByYear/Seminars2019.html">2019</a></li>
     <li><a href="SeminarsByYear/Seminars2018.html">2018</a></li>
