--- a/eigenfunctions-seminar.html
+++ b/eigenfunctions-seminar.html
@@ -14,6 +14,11 @@ title: Eigenfunctions Seminars
 <!-- <div class="row">
   <div class="col-md-11"> -->
   {% if sem.series == "Eigenfunctions Seminar" %}
+  {% capture start %}{{sem.date | date_to_long_string }} {{ sem.time }}{% endcapture %}
+    {%assign finish = start | date : '%s' | plus: 3600  %}
+    {% capture timing %}{{ start | date: "%Y%m%dT%H%M%S" }}/{{ finish | date: "%Y%m%dT%H%M%S" }}{% endcapture %}
+    {% capture fulltitle %}{{ sem.speaker }} : {{ sem.title}}{% endcapture %}
+    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{fulltitle | uri_escape }}&dates={{ timing }}&ctz=Asia/Calcutta" target="blank" class="ml-2 pull-right btn btn-primary">Add to Google calendar</a>
   <h5 id="{{ sem.date | date: "%Y-%m-%d" }}-{{ sem.speaker | slugify }}"><strong> Title: </strong>
     <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a>
     {% if sem.slides %}
