--- a/thesis.html
+++ b/thesis.html
@@ -11,6 +11,11 @@ title: Thesis
 <!-- <div class="row">
   <div class="col-md-11"> -->
   {% if sem.series == "Thesis" %}
+  {% capture start %}{{sem.date | date_to_long_string }} {{ sem.time }}{% endcapture %}
+    {%assign finish = start | date : '%s' | plus: 3600  %}
+    {% capture timing %}{{ start | date: "%Y%m%dT%H%M%S" }}/{{ finish | date: "%Y%m%dT%H%M%S" }}{% endcapture %}
+    {% capture fulltitle %}{{ sem.speaker }} : {{ sem.title}}{% endcapture %}
+    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{fulltitle | uri_escape }}&dates={{ timing }}&ctz=Asia/Calcutta" target="blank" class="pull-right btn btn-primary">Add to Google calendar</a>
   <h4>{{ sem.series-prefix }} {{sem.series}}{% if sem.series-suffix %} {{sem.series-suffix}}{% endif %}</h4>
   <h5 id="{{ sem.date | date: "%Y-%m-%d" }}-{{ sem.speaker | slugify }}"><strong> Title: </strong>
     <a href="{{ site.baseurl}}{{ sem.url }}.html">{{ sem.title }}</a>
