--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
       curDate %}
       {% assign counter=counter | plus: 1 %}
       <li>
+        {% capture start %}{{sem.date | date_to_long_string }} {{ sem.time }}{% endcapture %}
+        {%assign finish = start | date : '%s' | plus: 3600 %}
+        {% capture timing %}{{ start | date: "%Y%m%dT%H%M%S" }}/{{ finish | date: "%Y%m%dT%H%M%S" }}{% endcapture %}
+        {% capture fulltitle %}{{ sem.speaker }} : {{ sem.title}}{% endcapture %}
+        <div class="row mb-1">
+          <a href="https://outlook.office.com/calendar/0/deeplink/compose?path=/calendar/action/compose&rru=addevent&startdt={{ start | date: "
+            %Y-%m-%dT%H:%M:%S" }}&enddt={{ finish | date: "%Y-%m-%dT%H:%M:%S" }}&subject={{fulltitle | uri_escape
+            }}&body={{ sem.content | uri_escape }}&ctz=Asia/Calcutta" target="blank"
+            class="pull-right btn btn-success ml-2">Outlook calendar</a>
+          <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{fulltitle | uri_escape }}&dates={{ timing }}&details={{ sem.content | uri_escape }}&ctz=Asia/Calcutta"
+            target="blank" class="ml-2 pull-right btn btn-info">Google calendar</a>
+        </div>
         <div><strong> Title: </strong>
           {% if sem.series %}<a href="{% if sem.website %}{{ sem.website }}#{{ sem.date | date: " %Y-%m-%d" }}{% else
             %}{{ sem.series | slugify }}.html#{{ sem.date | date: "%Y-%m-%d" }}-{{ sem.speaker | slugify }}{% endif %}"
@@ -133,6 +145,18 @@
       {% for sem in sorted limit: 4 %}{% assign semDate = sem.date | date: '%s' | plus: 0 %}{% unless semDate >= curDate
       %}
       <li>
+        {% capture start %}{{sem.date | date_to_long_string }} {{ sem.time }}{% endcapture %}
+        {%assign finish = start | date : '%s' | plus: 3600 %}
+        {% capture timing %}{{ start | date: "%Y%m%dT%H%M%S" }}/{{ finish | date: "%Y%m%dT%H%M%S" }}{% endcapture %}
+        {% capture fulltitle %}{{ sem.speaker }} : {{ sem.title}}{% endcapture %}
+        <div class="row mb-1">
+          <a href="https://outlook.office.com/calendar/0/deeplink/compose?path=/calendar/action/compose&rru=addevent&startdt={{ start | date: "
+            %Y-%m-%dT%H:%M:%S" }}&enddt={{ finish | date: "%Y-%m-%dT%H:%M:%S" }}&subject={{fulltitle | uri_escape
+            }}&body={{ sem.content | uri_escape }}&ctz=Asia/Calcutta" target="blank"
+            class="pull-right btn btn-success ml-2">Outlook calendar</a>
+          <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{fulltitle | uri_escape }}&dates={{ timing }}&details={{ sem.content | uri_escape }}&ctz=Asia/Calcutta"
+            target="blank" class="ml-2 pull-right btn btn-info">Google calendar</a>
+        </div>
         <div><strong> Title: </strong>
           {% if sem.series %}<a href="{% if sem.website %}{{ sem.website }}#{{ sem.date | date: " %Y-%m-%d" }}{% else
             %}{{ sem.series | slugify }}.html#{{ sem.date | date: "%Y-%m-%d" }}-{{ sem.speaker | slugify }}{% endif %}"
