--- a/exam-schedule-june-2021.html
+++ b/exam-schedule-june-2021.html
@@ -23,7 +23,7 @@ examination based on the course timings that are being followed by the individua
 <tr><td>    MWF 8; MWF 8‐9.30; MWF 8.30‐10 </td><td>  Wednesday : June 2 Forenoon </td></tr>
 <tr><td>    TTh 8; TTh 8‐9.30; TTh 8.30‐10 </td><td> Wednesday : June 2 Afternoon </td></tr>
 <tr><td>    MWF 9; MWF 9‐10.30; MWF 9.30‐11 </td><td> Thursday : June 3 Forenoon </td></tr>
-<tr><td>    MWF 12; MWF 12.30‐2; MWF 1‐2.30</td><td> Thursday : June 3 </td></tr>
+<tr><td>    MWF 12; MWF 12.30‐2; MWF 1‐2.30</td><td> Thursday : June 3 Afternoon </td></tr>
 <tr><td>    MWF 10; MWF 10‐11.30; MWF 10.30‐12</td><td> Friday : June 4 Forenoon </td></tr>
 <tr><td>    MWF 4; MWF 3.30‐5</td><td> Friday : June 4 Afternoon </td></tr>
 <tr><td>    MWF 11; MWF 11‐12.30; MWF 11.30‐1 </td><td> Monday : June 7 Forenoon </td></tr>
