--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -5,7 +5,7 @@ title: Postdoctoral Positions
 The department hosts three types of postdoctoral fellows. These are:
 </p>
 <ol>
-    <li><b>Externally-funded postdoctoral fellows</b>
+    <li><h5>Externally-funded postdoctoral fellows</h5>
 
 
         <p>
@@ -31,7 +31,7 @@ The department hosts three types of postdoctoral fellows. These are:
     </li>
 
 
-    <li> <b>Institute-funded postdoctoral fellows</b>
+    <li> <h5>Institute-funded postdoctoral fellows</h5>
         <p>
 
             The institute offers a select number of postdoctoral fellowships including the Raman Post-doc Fellowship. If
@@ -58,7 +58,7 @@ The department hosts three types of postdoctoral fellows. These are:
         </p>
     </li>
 
-    <li> <b>Postdocs funded by individual faculty grants</b>
+    <li> <h5>Postdocs funded by individual faculty grants</h5>
 
         <p>
             Some members of our <a href="http://www.math.iisc.ac.in/faculty.html">faculty</a> may also have grants that
