--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -8,7 +8,7 @@ The department hosts three types of postdoctoral fellows. These are:
     <li><h5>Externally-funded postdoctoral fellows</h5>
 
 
-        <p>
+        <p style="margin-top:0.4cm;margin-bottom:0.2cm;">
             Most of the postdocs hosted by the department are funded by external fellowships. Some of these fellowships
             are:
 
@@ -32,7 +32,7 @@ The department hosts three types of postdoctoral fellows. These are:
 
 
     <li> <h5>Institute-funded postdoctoral fellows</h5>
-        <p>
+        <p style="margin-top:0.4cm;margin-bottom:0.2cm;">
 
             The institute offers a select number of postdoctoral fellowships including the Raman Post-doc Fellowship. If
             you wish to be hosted at the mathematics department as a Raman PDF, please carefully read the <a
@@ -60,7 +60,7 @@ The department hosts three types of postdoctoral fellows. These are:
 
     <li> <h5>Postdocs funded by individual faculty grants</h5>
 
-        <p>
+        <p style="margin-top:0.4cm;margin-bottom:0.2cm;">
             Some members of our <a href="http://www.math.iisc.ac.in/faculty.html">faculty</a> may also have grants that
             can support a post-doctoral position. You may write to faculty members (in your area of research) to enquire
             about the possibility of such funding.
