--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -8,7 +8,7 @@ The department hosts three types of postdoctoral fellows. These are:
     <li><h5>Externally-funded postdoctoral fellows</h5>
 
 
-        <p style="margin-top:0.6cm;">
+        <p style="margin-top:0.4cm;">
             Most of the postdocs hosted by the department are funded by external fellowships. Some of these fellowships
             are:
 
@@ -21,7 +21,7 @@ The department hosts three types of postdoctoral fellows. These are:
         </ul>
         </p>
 
-        <p style="margin-bottom:0.4cm;"">If you wish to apply for any of these, and then join the department, you must first identify a prospective <a
+        <p style="margin-bottom:0.8cm;">If you wish to apply for any of these, and then join the department, you must first identify a prospective <a
                 href="http://www.math.iisc.ac.in/faculty.html">faculty mentor</a> in your area of research, and seek
             their consent to host you at the department. The faculty member will inform you of their decision after
             consultation with the Postdoctoral Fellows Committee, which may contact you for more information to assess
@@ -32,7 +32,7 @@ The department hosts three types of postdoctoral fellows. These are:
 
 
     <li> <h5>Institute-funded postdoctoral fellows</h5>
-        <p style="margin-top:0.6cm;">
+        <p style="margin-top:0.4cm;">
 
             The institute offers a select number of postdoctoral fellowships including the Raman Post-doc Fellowship. If
             you wish to be hosted at the mathematics department as a Raman PDF, please carefully read the <a
@@ -51,7 +51,7 @@ The department hosts three types of postdoctoral fellows. These are:
             between 4-6 months. This includes the time required to obtain letters from your referees.
         </p>
 
-        <p style="margin-bottom:0.4cm;"">
+        <p style="margin-bottom:0.8cm;">
             Please note that the Raman PDF is a highly competitive and prestigious fellowship, and the department
             recommends very few applications for further screening at the institute level. The candidate must show a
             strong record of independent and high-quality research.
@@ -60,7 +60,7 @@ The department hosts three types of postdoctoral fellows. These are:
 
     <li> <h5>Postdocs funded by individual faculty grants</h5>
 
-        <p style="margin-top:0.6cm;margin-bottom:0.4cm;">
+        <p style="margin-top:0.4cm;margin-bottom:0.8cm;">
             Some members of our <a href="http://www.math.iisc.ac.in/faculty.html">faculty</a> may also have grants that
             can support a post-doctoral position. You may write to faculty members (in your area of research) to enquire
             about the possibility of such funding.
