--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -21,6 +21,8 @@ The department hosts three types of postdoctoral fellows. These are:
         </ul>
         </p>
 
+        <p> <b>Disclaimers.</b> For the latest information on these fellowships, please check their websites. Some of these may not longer be available. At the same time, there may be other funding opportunities that are not listed above. </p>
+
         <p style="margin-bottom:0.8cm;">If you wish to apply for any of these, and then join the department, you must first identify a prospective <a
                 href="http://www.math.iisc.ac.in/faculty.html">faculty mentor</a> in your area of research, and seek
             their consent to host you at the department. The faculty member will inform you of their decision after
