--- a/pubs-by-author.html
+++ b/pubs-by-author.html
@@ -18,7 +18,7 @@ title: Faculty Publications (by author) - Dept of Mathematics, IISc
 
 <ul>
   {% for fac in site.data.faculty %}
-  {% assign recent = true %}
+  {% assign counter = 0 %}
 <li><h4>
 <a class="" data-toggle="collapse" href="#{{fac.name | slugify}}" aria-expanded="false" aria-controls="{{fac.name | slugify}}">
   {{fac.name}}
@@ -37,6 +37,7 @@ title: Faculty Publications (by author) - Dept of Mathematics, IISc
   {% endfor %}
   {% if test %}
   {% assign recent = false %}
+  {% assign counter=counter | plus: 1 %}
     <li>
       {% if paper.author %} {{ paper.author }}{% else %} {{paper.editor}} (Ed.){% endif %},
       <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }} {{ paper.note }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}{{ paper.article }}.
@@ -46,7 +47,7 @@ title: Faculty Publications (by author) - Dept of Mathematics, IISc
     {% endif %}
   {% endfor %}
   {% endfor %}
-  {% if recent %}
+  {% if counter <= 3 %}
   <p> <strong>Note:</strong> {{ fac.name}} has joined the department recently. Only publications with affiliation the department are shown.</p>
   {% endif %}
   </ol>
